--- a/index.html
+++ b/index.html
@@ -8,6 +8,66 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+      /* Custom 3D Cube Styles */
+      .perspective-1000 {
+        perspective: 1000px;
+      }
+      .transform-style-3d {
+        transform-style: preserve-3d;
+      }
+      .cube-container {
+        width: 250px;
+        height: 250px;
+        position: relative;
+        transform-style: preserve-3d;
+        animation: spinCube 16s infinite linear;
+      }
+      .cube-container:hover {
+        animation-play-state: paused;
+      }
+      .cube-face {
+        position: absolute;
+        width: 250px;
+        height: 250px;
+        border: 2px solid rgba(77, 148, 255, 0.3);
+        background: rgba(10, 25, 47, 0.85);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        color: white;
+        backface-visibility: hidden; /* Optional: hide back to reduce glitching or keep visible for transparent effect */
+      }
+      
+      /* Position faces for a 250px cube (translateZ = 125px) */
+      .face-front  { transform: rotateY(0deg) translateZ(125px); }
+      .face-right  { transform: rotateY(90deg) translateZ(125px); }
+      .face-back   { transform: rotateY(180deg) translateZ(125px); }
+      .face-left   { transform: rotateY(-90deg) translateZ(125px); }
+
+      @keyframes spinCube {
+        0% { transform: rotateY(0deg) rotateX(0deg); }
+        100% { transform: rotateY(-360deg) rotateX(0deg); } /* Negative for counter-clockwise */
+      }
+
+      /* Mobile adjustment for smaller cube if needed, but 250px fits most phones */
+      @media (max-width: 640px) {
+        .cube-container {
+          width: 200px;
+          height: 200px;
+        }
+        .cube-face {
+          width: 200px;
+          height: 200px;
+        }
+        .face-front  { transform: rotateY(0deg) translateZ(100px); }
+        .face-right  { transform: rotateY(90deg) translateZ(100px); }
+        .face-back   { transform: rotateY(180deg) translateZ(100px); }
+        .face-left   { transform: rotateY(-90deg) translateZ(100px); }
+      }
+    </style>
     <script>
       tailwind.config = {
         theme: {
@@ -54,7 +114,7 @@
 }
 </script>
 </head>
-<body class="bg-dark-navy text-slate">
+<body class="bg-dark-navy text-slate overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
